// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Convert EditorJS data to JSX render header should render h1 with className 1`] = `
<h1
  className="class-name"
>
  Editor.js
</h1>
`;

exports[`Convert EditorJS data to JSX render header should render h2 with className 1`] = `
<h2
  className="class-name"
>
  Editor.js
</h2>
`;

exports[`Convert EditorJS data to JSX render header should render h3 with className 1`] = `
<h3
  className="class-name"
>
  Editor.js
</h3>
`;

exports[`Convert EditorJS data to JSX render header should render h4 with className 1`] = `
<h4
  className="class-name"
>
  Editor.js
</h4>
`;

exports[`Convert EditorJS data to JSX render header should render h5 with className 1`] = `
<h5
  className="class-name"
>
  Editor.js
</h5>
`;

exports[`Convert EditorJS data to JSX render header should render h6 with className 1`] = `
<h6
  className="class-name"
>
  Editor.js
</h6>
`;

exports[`Convert EditorJS data to JSX render lists should render list item 1`] = `
<li
  className="class-name"
>
  It is a block-styled editor
</li>
`;

exports[`Convert EditorJS data to JSX render lists should render list item as child 1`] = `
<li
  className="class-name"
>
  It is a block-styled editor
</li>
`;

exports[`Convert EditorJS data to JSX render lists should render lists 1`] = `
<ul>
  <li
    className="item-class-name"
  >
    It is a block-styled editor
  </li>
  <li
    className="item-class-name"
  >
    It returns clean data output in JSON
  </li>
  <li
    className="item-class-name"
  >
    Designed to be extendable and pluggable with a simple API
  </li>
</ul>
`;

exports[`Convert EditorJS data to JSX render lists should render lists with children 1`] = `
<ul
  className="class-name"
>
  <li
    className="item-class-name"
  >
    It is a block-styled editor
  </li>
  <li
    className="item-class-name"
  >
    It returns clean data output in JSON
  </li>
  <li
    className="item-class-name"
  >
    Designed to be extendable and pluggable with a simple API
  </li>
</ul>
`;

exports[`Convert EditorJS data to JSX render paragraph should render a pragraph with className 1`] = `
<p
  className="class-name"
>
  Editor.js
</p>
`;
